[package]
name = "winfu"
version = "0.2.0"
edition = "2021"
description = "Commandline Function Manager For Windows"
repository = "https://github.com/nrdrch/winfu"
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
[dependencies]
termcolor = "1.2.0"
bat = "0.23.0"
ini = "1.3.0"
ansi_term = "0.12.1"
fs = "0.0.5"
chrono = "0.4.24"
regex = "1.7.3"
clipboard = "0.5.0"
